# g-rust

./: .gitmodules  AGENTS.md  Cargo.toml  PORT_STATUS_REPORT.md
.serena/: project.yml
crates/manifold/: AGENTS.md  Cargo.toml
crates/manifold-boolean/: AGENTS.md  Cargo.toml
crates/manifold-boolean/src/: helpers.rs  lib.rs  tests.rs  triangulation.rs
crates/manifold-boolean/src/kernel/: boolean3.rs  boolean_result.rs  csg_tree.rs  edge_ops.rs  face_ops.rs  intersect12.rs  kernel02.rs  kernel11.rs  kernel12.rs  mod.rs  properties.rs  quickhull.rs  sdf.rs  smoothing.rs  subdivision.rs  winding03.rs
crates/manifold-boolean/src/kernel/edge_ops/: dedupe.rs  mod.rs  pinch.rs  simplify.rs
crates/manifold-boolean/src/kernel/shadow01/: mod.rs  shadow01_functions.rs
crates/manifold-boolean/src/tests/: basic_compilation_test.rs  basic_test.rs  boolean_tranche1.rs  boolean_tranche1b.rs  comprehensive_tests.rs  determinism.rs  helper_tests.rs  integration_test.rs  mod.rs  triangulation.rs  util.rs
crates/manifold-boolean/tests/: simple_test.rs
crates/manifold-collider/: Cargo.toml
crates/manifold-collider/src/: build_boxes.rs  find_collision.rs  lib.rs  node.rs  radix_tree.rs
crates/manifold-math/: Cargo.toml
crates/manifold-math/src/: bbox.rs  constants.rs  interp.rs  lib.rs  morton.rs  tri_dist.rs  trig.rs  utils.rs
crates/manifold-meshio/: Cargo.toml
crates/manifold-parallel/: Cargo.toml
crates/manifold-parallel/src/: lib.rs  ops.rs  policy.rs  scan.rs  sort.rs
crates/manifold-polygon/: Cargo.toml
crates/manifold-polygon/src/: bbox.rs  lib.rs  polygon.rs  tree2d.rs  triangulation.rs
crates/manifold-types/: AGENTS.md  Cargo.toml
crates/manifold-types/src/: barycentric.rs  error.rs  (+6 more)
crates/manifold/src/: lib.rs
crates/manifold/tests/: boolean_tests.rs  golden_tests.rs  manifold_tests.rs  math_tests.rs  primitive_tests.rs  simple_test.rs
scripts/: verify_parity.sh
specs/: comprehensive_migration_plan.md  critical_algorithms.md  developer_workflow.md  file_mapping.md  implementation_checklist.md  migration_plan.md  porting_strategy.md  review-01.md  test_specification.md
tests/golden/: golden_boolean.json  golden_cube_sphere.json
(+15 files in other folders)
