[package]
name = "manifold-boolean"
version = "0.1.0"
edition = "2021"

[dependencies]
manifold-types = { path = "../manifold-types" }
manifold-math = { path = "../manifold-math" }
manifold-parallel = { path = "../manifold-parallel" }
manifold-collider = { path = "../manifold-collider" }
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
