[package]
name = "manifold"
version = "0.1.0"
edition = "2021"

[dependencies]
manifold-boolean = { path = "../manifold-boolean" }
manifold-polygon = { path = "../manifold-polygon" }
manifold-meshio = { path = "../manifold-meshio" }
glam.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
